--- a/assets/css/asidemenu.css
+++ b/assets/css/asidemenu.css
@@ -253,3 +253,17 @@
         margin-left: 300px;
     }
 }
+
+#sidebar .counter {
+    background-color: #ff4081;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    position: absolute;
+    right: 15px;
+}
+
+#sidebar.expanded .counter {
+    right: 20px;
+}
