--- a/assets/css/asidemenu.css
+++ b/assets/css/asidemenu.css
@@ -255,7 +255,7 @@
 }
 
 #sidebar .counter {
-    background-color: #ff4081;
+    background-color: #A52A2A;
     color: white;
     border-radius: 50%;
     padding: 2px 6px;
@@ -265,5 +265,5 @@
 }
 
 #sidebar.expanded .counter {
-    right: 20px;
+    right: 10px;
 }
