--- a/assets/css/asidemenu.css
+++ b/assets/css/asidemenu.css
@@ -257,5 +257,22 @@
     }
 }
 
+/*
+    Extras
+*/
 
+#sidebar .counter {
+    background-color: #0d6efd;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    position: absolute;
+    right: 10px;
+    width: 2em;
+}
+
+#sidebar.expanded .counter {
+    right: 10px;
+}
 
