--- a/assets/css/asidemenu.css
+++ b/assets/css/asidemenu.css
@@ -262,7 +262,7 @@
 */
 
 #sidebar .counter {
-    background-color: #0d6efd;
+    background-color: #A52A2A;
     color: white;
     border-radius: 50%;
     padding: 2px 6px;
