--- a/views/auth/register.html
+++ b/views/auth/register.html
@@ -4,22 +4,51 @@
     Icons using FontAwesome *
 -->
   
-<div class="row vh-100 d-flex  align-items-center">
-	<div class="col-xs-12   col-sm-8 offset-sm-2    col-md-6 offset-md-3    col-lg-4 offset-lg-4">	
-
-		<div class="card card-primary card-outline"><div class="card-header"><h5 class="card-title">Iscrizione</h5></div> <div class="card-body"><div class="input-group mb-3"><span class="input-group-text"><i class="fas fa-at"></i></span><input class="form-control" type="email" id="email" placeholder="E-mail" required="required" style="font-size:1rem"/></div> <div class="input-group mb-3"><span class="input-group-text"><i class="fas fa-user"></i></span><input class="form-control" type="text" id="username" placeholder="Nombre de usuario" required="required" style="font-size:1rem"/></div> <div class="input-group mb-3"><span class="input-group-text"><i class="fas fa-key"></i></span><input class="form-control" type="password" id="password" placeholder="Password" required="required" style="font-size:1rem"/></div> <div class="input-group mb-3"><span class="input-group-text"><i class="fas fa-key"></i></span><input class="form-control" type="password" id="password_confirmation" placeholder="Password confirmación" required="required" style="font-size:1rem"/></div> <div style="margin-bottom:1em;">
-			<a href="login/rememberme">Ricorda la password</a>
-			</div>	
-
-			<div class="form-group">
-				<button type="submit" class="btn btn-primary btn-lg btn-block login-btn w-100" onClick="register()">Inviare</button>
+<div class="row vh-100 d-flex align-items-center">
+	<div class="col-xs-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-4 offset-lg-4">	
+		<div class="card card-primary card-outline">
+			<div class="card-header">
+				<h5 class="card-title">Iscrizione</h5>
 			</div>
+			<div class="card-body">
+				<div class="input-group mb-3">
+					<span class="input-group-text">
+						<i data-feather="at-sign"></i>
+					</span>
+					<input class="form-control" type="email" id="email" placeholder="E-mail" required="required" style="font-size:1rem" />
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">
+						<i data-feather="user"></i>
+					</span>
+					<input class="form-control" type="text" id="username" placeholder="Nombre de usuario" required="required" style="font-size:1rem" />
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">
+						<i data-feather="key"></i>
+					</span>
+					<input class="form-control" type="password" id="password" placeholder="Password" required="required" style="font-size:1rem" />
+				</div>
+				<div class="input-group mb-3">
+					<span class="input-group-text">
+						<i data-feather="key"></i>
+					</span>
+					<input class="form-control" type="password" id="password_confirmation" placeholder="Password confirmación" required="required" style="font-size:1rem" />
+				</div>
+				<div style="margin-bottom:1em;">
+					<a href="login/rememberme">Ricorda la password</a>
+				</div>	
+
+				<div class="form-group">
+					<button type="submit" class="btn btn-primary btn-lg btn-block login-btn w-100" onClick="register()">Inviare</button>
+				</div>
 			
-			<div class="mt-3" style="text-align:right;">
-				Già registrato? <a href="login">Login</a>
-			</div> 
-			<span id="registerError" class="mt-3"></span></div> </div>
-		
+				<div class="mt-3" style="text-align:right;">
+					Già registrato? <a href="login">Login</a>
+				</div> 
+				<span id="registerError" class="mt-3"></span>
+			</div>
+		</div>
 	</div>
 </div>
-     
+
