--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -52,5 +52,5 @@
 }
 
 .reveal-text.show {
-    max-width: 200px; /* Ajusta este valor según el ancho máximo que necesites */
+    max-width: 200px; 
 }
